tests/errors/syn.expected-identifier.hat.or
main :: () -> void {
    x := 0;
    foo :: !() -> void {
        ^1;
    };
};
